<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.view.GetStarted">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/bg_getstarted" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sudahkah_anda_cek"
            android:textColor="@color/purple"
            android:textSize="23sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/cuaca"
                android:textColor="@color/yellow"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/hari_ini"
                android:layout_marginLeft="10dp"
                android:textColor="@color/purple"
                android:textSize="23sp"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/open_sans_light"
            android:gravity="center"
            android:textSize="13sp"
            android:text="Aplikasi ini untuk melihat cuaca\nterbaru dilokasi anda"
            android:textColor="@color/black" />


        <androidx.cardview.widget.CardView
            android:id="@+id/btn_lanjutkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:cardElevation="10dp"
            android:layout_marginBottom="30dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            app:cardCornerRadius="8dp"
            android:layout_marginLeft="30dp"
            android:focusable="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/purple">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lanjutkan"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>